--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,7 @@ metadata:
   name: backstage-testing
   annotations:
     github.com/project-slug: germanfo/backstage-testing
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: other
   lifecycle: unknown
