--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,17 +4,8 @@ metadata:
   name: backstage-testing
   annotations:
     github.com/project-slug: germanfo/backstage-testing
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: .
 spec:
   type: library
   lifecycle: unknown
   owner: guests
-  links:
-    - title: Website
-      url: http://backstage.io
-    - title: Documentation
-      url: https://backstage.io/docs
-    - title: Storybook
-      url: https://backstage.io/storybook
-    - title: Discord Chat
-      url: https://discord.com/invite/EBHEGzX
